--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
         </div>
     </section>
 
-
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="showOff/my-bg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web Developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.
+                <a class="link-button" target="_blank" href="">Download Resume</a>
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
